# pandyahomelab

./: .gitignore  README.md  scaffold-platform.sh
ai-literacy-apps-script/: README.md  STATUS.md  admin-dashboard.Index.html  admin-dashboard.gs  public-registration.gs
ai-literacy-apps-script/docs/: AI-Literacy-Admin-Handbook.md  AI-Literacy-Decision-Brief.md  AI-Literacy-Documentation-Summary.xlsx  AI-Literacy-migration-guide.md  AI-Literacy-open-decisions.md  AI-Literacy-promote-next-howto.md  AI-Literacy-sheet-design.md  claude-setup-captions.srt  claude-setup-narration.txt
compose/: .env.example  README.md  docker-compose.yml
deployment/dl/: .env.example  docker-compose.dev.yml  docker-compose.yml
deployment/ml/: .env.example  docker-compose.dev.yml  docker-compose.yml
docs/: DEVELOPMENT_RUNBOOK.md  ML_PROJECT_WALKTHROUGH.md  NETWORK_CIDR_SUMMARY.md  PHASE_1A_STARTUP.md  PHASE_1B_EXECUTION_PLAN.md  PHASE_1C_EXECUTION_PLAN.md  PHASE_1D_EXECUTION_PLAN.md  PHASE_1E_EXECUTION_PLAN.md  PHASE_2A_EXECUTION_PLAN.md  PHASE_2B_EXECUTION_PLAN.md  PHASE_2C_EXECUTION_PLAN.md  PHASE_2_MASTER_PLAN.md  v3-refactor-plan.md
ml/_templates/ml-project-template/: .env.example  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
ml/_templates/ml-project-template/presentation-logic/api/: schemas.py
ml/_templates/ml-project-template/presentation-logic/errors/: handlers.py
ml/_templates/ml-project-template/shared/: config.py  exceptions.py
ml/_templates/ml-project-template/tests/: conftest.py
ml/_templates/ml-project-template/tests/application/: test_classifier.py
ml/_templates/ml-project-template/tests/presentation/: test_routes.py
ml/admin-portal/: README.md  pyproject.toml  requirements.txt
ml/admin-portal/app/: auth.py  db.py  feedback_queries.py  feedback_routes.py  ip_hasher.py  main.py  queries.py  routes.py  schema.py
ml/admin-portal/app/templates/: dashboard.html  moderation.html
ml/admin-portal/docker/: Dockerfile
ml/analytics-ingester/: README.md  pyproject.toml
ml/analytics-ingester/docker/: Dockerfile
ml/analytics-ingester/ingester/: checkpoint.py  enricher.py  main.py  parser.py  schema.py  tailer.py  writer.py
site/: index.html
website/: about-platform.json  feedback-widget.js  index.html
(+168 files in other folders)
