[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-ingester"
version = "1.0.0-alpha1"
description = "Tails Nginx JSON access log, hashes IPs, detects bots, writes events to PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Archit Pandya", email = "architpandya@yahoo.com"}]
dependencies = ["psycopg2-binary==2.9.9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ingester*"]
