[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-project-template"
version = "1.0.0"
description = "Machine Learning project with 3-layer architecture"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Archit Pandya", email = "archit@pandyahomelab.com"}]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "scikit-learn==1.3.2",
    "torch==2.1.1",
    "numpy==1.26.3",
    "pandas==2.1.4",
    "minio==7.2.0",
    "redis==5.0.1",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "isort==5.13.2",
    "bandit==1.7.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["presentation_logic*", "application_logic*", "db_logic*", "shared*"]
